<?php
namespace Model;

interface IContainsImage {
    function getImagePath(): string;
}